# trees-2025

./: .gitignore  CLAUDE.md  Makefile  package-lock.json  package.json
tree-rs/: Cargo.toml
tree-rs/src/: lib.rs  tree.rs  tree_structure.rs
web/: index.html  main.ts  package-lock.json  package.json
web/static/textures/bark/: bark-library.json
web/static/twigs/: README.md  twig.004.gltf  twigs-library.json
