[package]
name = "tree-rs"
version = "0.1.0"
authors = ["Herman Schaaf <herman.schaaf@gmail.com>"]
description = "Generate beautiful, realistic 3D trees"
license = "Proprietary"
repository = "https://github.com/hermanschaaf/trees"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
micromath = { version = "2.1", features = ["quaternion", "vector"] }
glam = { version = "0.29", features = ["serde"] }
rand = { version = "0.8", features = ["small_rng"] }
getrandom = { version = "0.2", features = ["js"] }
rand_distr = "0.4"
console_error_panic_hook = { version = "0.1.6", optional = true }

[features]
default = ["console_error_panic_hook"]
